[tool.poetry]
name = "Online-Lepu"
version = "1.0.0"
description = "Ein Code, mit dem dein Discord-Konto immer online sein wird!"
authors = ["Lepu#0001"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
websocket = "^0.2.1"
websocket-client = "1.4.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
